--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+.nike-logo{
+  width: 100px;
+  height: 70px;
+}
+
+nav{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1280px;
+  border: 2px solid black;
+}
+nav ul{
+  display: flex;
+  list-style: none;
+  gap: 24px;
+  margin-top: 20px;
+}
+.navbar-button{
+
+  background-color:white;
+  padding: 10px 10px;
+  height: 50px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
